--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ a {
 .section-desc {
   text-align: center;
   width: 468px;
-  margin: 0 auto;
+  margin: 18px auto 0;
 }
 .service__row {
   margin-top: 70px;
@@ -237,4 +237,61 @@ a {
 }
 .service__btn {
   margin-top: 55px;
+}
+
+/* =========================work====================  */
+.work {
+  background: #f6fbff;
+  padding: 100px 0;
+}
+.work__desc {
+  width: 468px;
+  margin: 0;
+  margin-top: 18px;
+  text-align: left;
+}
+.work__list {
+  margin-top: 86px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+.work-item {
+  padding: 43px;
+  border-radius: 4px;
+  border: 16px solid #eaf6ff;
+  background: #fff;
+}
+.work-item:hover {
+  border-color: #2e80ce;
+  transition: 0.25s;
+  transform: translateY(-16px);
+}
+.work-item__heading {
+  margin-top: 18px;
+  color: #10375c;
+  font-size: 2.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.38;
+}
+.work-item__desc {
+  margin-top: 20px;
+  color: #575f66;
+  font-size: 1.6;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.75;
+}
+.work-item__more {
+  margin-top: 18px;
+  display: block;
+  color: #2e80ce;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75;
+}
+.work-item__more:hover {
+  text-decoration: underline;
 }
