--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,3 +295,47 @@ a {
 .work-item__more:hover {
   text-decoration: underline;
 }
+
+/* =========================about====================  */
+.about {
+  margin-top: 85px;
+  padding: 85px 0 206px;
+}
+.about-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.about__media {
+  width: 49%;
+}
+.about-content {
+  width: 40%;
+}
+.about__img {
+  position: relative;
+}
+.about__img--big {
+  display: flex;
+  width: 512px;
+  height: 370px;
+  border-radius: 6px;
+  box-shadow: 0 14px 28px 0 rgba(0, 0, 0, 0.07);
+  object-fit: cover;
+}
+.about__img--small {
+  position: absolute;
+  top: 121px;
+  left: 238px;
+  width: 332px;
+  height: 370px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+.section-desc {
+  margin-top: 18px;
+  text-align: left;
+}
+.about-content__btn {
+  margin-top: 38px;
+}
