--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,33 @@ a {
   font-weight: 300;
   line-height: 1.67;
 }
+.control {
+  display: flex;
+  column-gap: 18px;
+  align-items: center;
+}
+.control__btn {
+  display: flex;
+  width: 36px;
+  height: 36px;
+  padding: 2px 7px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 50%;
+  border: 1px solid #575f66;
+  background: #fff;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.control__btn:hover {
+  background: #2e80ce;
+  border-color: #2e80ce;
+  color: #fff;
+}
+.control-icon--next {
+  transform: rotate(180deg);
+}
 /* =========================header==================== */
 .header {
   padding-top: 30px;
@@ -338,4 +365,105 @@ a {
 }
 .about-content__btn {
   margin-top: 38px;
+}
+/* =========================team====================  */
+.team {
+  padding: 85px 0;
+}
+.team-header {
+  text-align: center;
+  margin: 0 auto;
+}
+.team__cta {
+  margin-top: 38px;
+}
+.team__list {
+  margin-top: 70px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
+}
+.team-item__thum {
+  height: 290px;
+  max-width: 100%;
+  object-fit: cover;
+  display: block;
+  transition: 0.5s;
+}
+.team-item__img-bg {
+  padding-top: 28px;
+  border-radius: 6px;
+  background: #eaf6ff;
+  overflow: hidden;
+}
+.team-item:hover .team-item__thum {
+  transform: scale(1.1);
+}
+.team-item__name {
+  margin-top: 12px;
+  color: #10375c;
+  text-align: center;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.75;
+}
+.team-item__desc {
+  color: #575f66;
+  font-size: 1.4rem;
+  text-align: center;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.86;
+}
+.team__control {
+  margin-top: 38px;
+  justify-content: center;
+}
+
+/* =========================install Mobile====================  */
+.install {
+  padding: 85px 0;
+}
+.install__inner {
+  margin: 35px 0 0;
+  position: relative;
+  height: 427px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 70px;
+  border-radius: 4px;
+  background: #2e80ce;
+}
+.install__img {
+  position: absolute;
+  bottom: 0;
+  width: 284px;
+  height: 522px;
+  object-fit: cover;
+}
+.install__content {
+  width: 586px;
+  color: #fff;
+  z-index: 1;
+}
+.install__heading {
+  min-width: 489px;
+  color: #fff;
+}
+.install__desc {
+  margin-top: 18px;
+  min-width: 586px;
+  color: #fff;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.67;
+}
+.install__row {
+  display: flex;
+  margin-top: 38px;
+  column-gap: 18px;
+  align-items: center;
 }
