--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,3 +467,102 @@ a {
   column-gap: 18px;
   align-items: center;
 }
+/* =========================install Mobile====================  */
+.blog {
+  padding: 85px 0;
+}
+.blog__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.blog__content {
+  width: 40%;
+}
+.blog__heading {
+  min-width: 470px;
+}
+.blog__more {
+  margin-top: 28px;
+  display: inline-block;
+  color: #10375c;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.56;
+  text-decoration-line: underline;
+  text-underline-offset: 5px;
+}
+.blog__more:hover {
+  color: #2e80ce;
+}
+.blog__control {
+  margin-top: 28px;
+  justify-content: flex-start;
+}
+.blog__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 30px;
+}
+.blog-item {
+  min-width: 270px;
+  border-radius: 12px;
+  border: 1px solid #e8ebee;
+  background: #fff;
+  overflow: hidden;
+}
+.blog-item:hover {
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-color: transparent;
+  transition: 0.25s;
+}
+.blog-item:hover .blog-item__thumb {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+.blog-item__thumb {
+  width: 270px;
+  height: 172px;
+  object-fit: cover;
+  width: 100%;
+  transition: 0.25s;
+}
+.blog-item__wrap {
+  height: 172px;
+  overflow: hidden;
+}
+.blog-item__body {
+  padding: 18px 22px;
+}
+.blog-item__heading {
+  color: #10375c;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.62;
+}
+.blog-item__desc {
+  margin-top: 10px;
+  color: #575f66;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.72;
+}
+.blog-item__more {
+  margin-top: 12px;
+  display: inline-block;
+  color: #10375c;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+}
+.blog-item__more:hover {
+  color: #2e80ce;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  transition: 0.25s;
+}
+/* =========================appointment====================  */
